sandbox/output
StringCalculator.java:15: error: variable temp might not have been initialized
        return temp[0] + temp[1];
               ^
1 error
